# ALL-IN-ONE

./: .gitignore  Backtest kalitesini bozmadan süresini kısaltmak için.docx  GİTHUB TOKEN.docx  MALİYET ANALİZİ UYGULAMANIN YEREL BİLGİSAYARA KURULUM ADIMLARI.docx  MARK MİNERVİNİ  programının son haline dönebilmek için terminale aşağıdaki komutu yaz.docx  README.md  SEPA STOCK SCANNER DEĞİŞİKLİKLER GÜNCELLEMESİ NASIL YAPILIR.docx  VERDENT.docx  borsa_secici_app.py  checkpoint.sh  deploy.sh  fmp_provider.py  mark_minervini_backtest.py  mark_minervini_scanner.py  protect_core.sh  requirements.txt  smoke_test.sh  stock_db.py
101 YATIRIM/: backtest_app.py  bist_tarama.py  kur_zamanlayici.sh  portfoy_durumu.json  portfoy_yonetici.py  rebalancing_log.txt
AI-TEMEL-OPTIMIZER/: ai_score.py  app.py  market_regime.py  portfolio_risk.py  start.sh
ALL IN ONE/: .gitignore  data_cache_borsa_secici.py  scan_history.json
ALL-IN-ONE-PLATFORM/: .gitignore  AllInOne.spec  README.md  app.py  launcher.py  requirements.txt  start.sh  start_all.sh  stop_all.sh
BIST:USA /: app.py  backtest_engine.py  data_fetcher.py  indicators.py  scan_history.json  scan_history.py  screener.py  stock_lists.py  test_app.py
EKONOMİK HABER AKISI/: start.sh
Ensemble-Portfoy/: app.py
MARK MİNERVİNİ/: .gitignore  (+41 more)
Portfolio-Optimizer/: .gitignore  .replit  app_watchdog.py  build.sh  build_windows.bat  create_icon.py  data_cache.py  install_service.sh  launcher.py  pyproject.toml  replit.md  setup_autostart.sh  start_app.sh  stock_db.py  watchdog_simple.sh
Portfolio-Optimizer/.streamlit/: config.toml
(+5281 files in other folders)
