[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pandas-ta>=0.4.71b0",
    "plotly>=6.5.2",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "streamlit>=1.54.0",
    "twelvedata>=1.2.28",
    "vectorbt>=0.28.4",
    "yfinance>=1.2.0",
]
